started the design

--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
+  <link href="normalize.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Your title</title>
+  <title>Dunder</title>
 </head>
 <body>
+  <header>
+    <h1>Dunder</h1>
+    <img src="koks.png" alt="dunder">
+  </header>
+  <div class="part2">
+    hej
+  </div>
+  <div class="part3">
+    hej
+  </div>
+  <div class="part4">
+    hej
+  </div>
+  <div class="part5">
+    hej
+  </div>
+  <div class="part6">
+    hej
+  </div>
 </body>
 </html>
