added basic media query

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <title>Dunder</title>
 </head>
 <body>
-  <header>
+  <div class="part1">
     <h1>Dunder</h1>
-    <img src="koks.png" alt="dunder">
-  </header>
+    <img src="images/koks.png" alt="dunder">
+  </div>
   <div class="part2">
     hej
   </div>
