added a scroll down button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="part1">
     <h1>Dunder</h1>
     <img src="images/koks.png" alt="dunder">
+    <p class="scrollDown">Köp NU!</p>
   </div>
   <div class="part2">
     hej
@@ -28,5 +29,8 @@
   <div class="part6">
     hej
   </div>
+  <script type="text/javascript" src="script.js">
+    
+  </script>
 </body>
 </html>
