added html elements

--- a/index.html
+++ b/index.html
@@ -16,22 +16,55 @@
     <p class="scrollDown">Köp NU!</p>
   </div>
   <div class="part2">
-    hej
+    <h1>100% Colombianskt </h1>
+    <h1>93% Rent </h1>
+    <h1>0% Utbankat </h1>
   </div>
   <div class="part3">
     hej
   </div>
   <div class="part4">
-    hej
-  </div>
-  <div class="part5">
-    hej
-  </div>
-  <div class="part6">
-    hej
-  </div>
-  <script type="text/javascript" src="script.js">
+    <h1>Rekomendationer</h1>
+    <div class="plura">
+      <h2>Plura</h2>
+      <p>- Jag har slutat med allt utom mat och Dunder</p>
+    </div>
+    <div class="persbrandt">
+      <h2>Persbrandt</h2>
+      <p>- Lycka är jävligt överskattat man får vara nöjd om man är lite glad ibland</p>
+    </div>
+    <div class="tina">
+      <h2>Koks-Tina</h2>
+      <p>- Riktigt hästakaffe 
+        - så starkt att öronen fladrar!</p>
+      </div>
+    </div>
+    <div class="part5">
+      <h1>Hur fungerar Dunder</h1>
+      <h2>Uppiggande</h2>
+      <p>För dig som inte tål kaffe</p>
+      <h2>Hämmar minnesbildning</h2>
+      <p>Så att du kan festa utan bry dig om vad du kommer ihåg imorgon</p>
+      <h2>Kliniskt bevisad effekt</h2>
+      <p>10 av 10 läkare rekomenderar</p>
+      <img src="images/snowvit.jpeg" alt="snövit">
+      <h2>Doktor Snövit</h2>
+    </div>
+    <div class="part6">
+      <h1>Beställ</h1>
+      <h2>Hur kul vill du ha kompis?</h2>
+      <div class="">
+        <img src="" alt="">
+        <h2>1 Gram</h2>
+      </div>
+      <div class="">
+        <img src="" alt="">
+        <h2>5 gram</h2>
+      </div>
+      <p class="scrollDown">Beställ</p>
+    </div>
+    <script type="text/javascript" src="script.js">
     
-  </script>
-</body>
-</html>
+    </script>
+  </body>
+  </html>
