--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
 <body>
   <div class="part1">
     <h1>Dunder</h1>
-    <img src="images/koks.png" alt="dunder">
+    <h2 class="slogan">- som gör under</h2>
+    <img src="images/koks.png" alt="dunder" class="heroImage">
     <p class="scrollDown">Köp NU!</p>
   </div>
   <div class="part2">
-    <h1>100% Colombianskt </h1>
-    <h1>93% Rent </h1>
-    <h1>0% Utbankat </h1>
+    <h3>100% Colombianskt </h1>
+    <h3>93% Rent </h1>
+    <h3>0% Utbankat </h1>
   </div>
   <div class="part3">
     hej
   </div>
   <div class="part4">
-    <h1>Rekomendationer</h1>
+    <h1 class="partTitle white">Rekomendationer</h1>
     <div class="plura">
       <h2>Plura</h2>
       <p>- Jag har slutat med allt utom mat och Dunder</p>
@@ -40,18 +41,20 @@
       </div>
     </div>
     <div class="part5">
-      <h1>Hur fungerar Dunder</h1>
+      <h1 class="partTitle">Hur fungerar Dunder</h1>
       <h2>Uppiggande</h2>
       <p>För dig som inte tål kaffe</p>
       <h2>Hämmar minnesbildning</h2>
       <p>Så att du kan festa utan bry dig om vad du kommer ihåg imorgon</p>
       <h2>Kliniskt bevisad effekt</h2>
       <p>10 av 10 läkare rekomenderar</p>
-      <img src="images/snowvit.jpeg" alt="snövit">
+      <div class="snowWhite">
+      <img src="images/snowvit.jpeg" alt="snövit" class="doctor">
       <h2>Doktor Snövit</h2>
+      </div>
     </div>
     <div class="part6">
-      <h1>Beställ</h1>
+      <h1 class="partTitle">Beställ</h1>
       <h2>Hur kul vill du ha kompis?</h2>
       <div class="">
         <img src="" alt="">
@@ -61,7 +64,7 @@
         <img src="" alt="">
         <h2>5 gram</h2>
       </div>
-      <p class="scrollDown">Beställ</p>
+      <p >Beställ</p>
     </div>
     <script type="text/javascript" src="script.js">
     
