added more styling

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <p class="scrollDown">Köp NU!</p>
   </div>
   <div class="part2">
-    <h3>100% Colombianskt </h1>
-    <h3>93% Rent </h1>
-    <h3>0% Utbankat </h1>
+    <h3 class="textPart2"><span>100% </span> Colombianskt </h3>
+    <h3 class="textPart2"><span>93% </span> Rent </h3>
+    <h3 class="textPart2"><span>0% </span> Utbankat </h3>
   </div>
   <div class="part3">
     hej
