--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
       </div>
     </div>
     <div class="part5">
-      <h1 class="partTitle">Hur fungerar Dunder</h1>
-      <h2>Uppiggande</h2>
-      <p>För dig som inte tål kaffe</p>
-      <h2>Hämmar minnesbildning</h2>
-      <p>Så att du kan festa utan bry dig om vad du kommer ihåg imorgon</p>
-      <h2>Kliniskt bevisad effekt</h2>
-      <p>10 av 10 läkare rekomenderar</p>
+      <h1 class="partTitle">Hur fungerar <span class="h1Red">Dunder</span></h1>
+      <section class="Part5">
+        <h2 class="h2Part5">Uppiggande</h2>
+        <p>För dig som inte tål kaffe</p>
+        <h2 class="h2Part5">Hämmar minnesbildning</h2>
+        <p>Så att du kan festa utan bry dig om vad du kommer ihåg imorgon</p>
+        <h2 class="h2Part5">Kliniskt bevisad effekt</h2>
+        <p>10 av 10 läkare rekomenderar</p>
+      </section>
       <div class="snowWhite">
       <img src="images/snowvit.jpeg" alt="snövit" class="doctor">
       <h2>Doktor Snövit</h2>
