--- a/index.html
+++ b/index.html
@@ -23,20 +23,23 @@
     <h3 class="textPart2"><span>0% </span> Utbankat </h3>
   </div>
   <div class="part3">
-    hej
+    <h1 class="partTitle white">Lätt att använda</h1>
   </div>
   <div class="part4">
     <h1 class="partTitle white">Rekomendationer</h1>
-    <div class="plura">
-      <h2>Plura</h2>
+    <div class="plura quotes">
+      <img src="images/plura.png" alt="" class="faceImages">
+      <h2 class="names white">Plura</h2>
       <p>- Jag har slutat med allt utom mat och Dunder</p>
     </div>
-    <div class="persbrandt">
-      <h2>Persbrandt</h2>
+    <div class="persbrandt quotes">
+      <img src="images/persbrandt.png" alt="" class="faceImages">
+      <h2 class="names">Persbrandt</h2>
       <p>- Lycka är jävligt överskattat man får vara nöjd om man är lite glad ibland</p>
     </div>
-    <div class="tina">
-      <h2>Koks-Tina</h2>
+    <div class="tina quotes">
+      <img src="images/kokstina.png" alt="" class="faceImages">
+      <h2 class="names">Koks-Tina</h2>
       <p>- Riktigt hästakaffe 
         - så starkt att öronen fladrar!</p>
       </div>
