--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
   </div>
   <div class="part4">
     <h1 class="partTitle white">Rekomendationer</h1>
-    <div class="plura quotes">
-      <img src="images/plura.png" alt="" class="faceImages">
+    <div class="plura quoteBlock">
+      <img src="images/plura.png" alt="" class="faceImagePlura">
       <h2 class="names white">Plura</h2>
       <p>- Jag har slutat med allt utom mat och Dunder</p>
     </div>
-    <div class="persbrandt quotes">
-      <img src="images/persbrandt.png" alt="" class="faceImages">
+    <div class="persbrandt quoteBlock">
+      <img src="images/persbrandt.png" alt="" class="faceImagePersbrandt">
       <h2 class="names">Persbrandt</h2>
       <p>- Lycka är jävligt överskattat man får vara nöjd om man är lite glad ibland</p>
     </div>
-    <div class="tina quotes">
-      <img src="images/kokstina.png" alt="" class="faceImages">
+    <div class="tina quoteBlock">
+      <img src="images/kokstina.png" alt="" class="faceImageTina">
       <h2 class="names">Koks-Tina</h2>
       <p>- Riktigt hästakaffe 
         - så starkt att öronen fladrar!</p>
