Added more SVGs and CSS for section 3

--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
     <h3 class="textPart2"><span>0% </span> Utbankat </h3>
   </div>
   <div class="part3">
-    <h1 class="partTitle white">Lätt att använda</h1>
+    <h1 class="partTitle white section3">Lätt att använda</h1>
+    <section class="part3">
+      <div class="col1 Part3">
+        <svg>asd</svg>
+      </div>
+      <div class="col1 Part3">
+        <svg>asd</svg>
+      </div>
+    </section>
   </div>
   <div class="part4">
     <h1 class="partTitle white">Rekomendationer</h1>
