added styling for desktop view

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <p class="scrollDown">Köp NU!</p>
   </div>
   <div class="part2">
-    <h3 class="textPart2"><span>100% </span> Colombianskt </h3>
-    <h3 class="textPart2"><span>93% </span> Rent </h3>
-    <h3 class="textPart2"><span>0% </span> Utbankat </h3>
+    <h3 class="textPart2"><span class="procent white">100% </span> Colombianskt </h3>
+    <h3 class="textPart2"><span class="procent">93% </span> Rent </h3>
+    <h3 class="textPart2"><span class="procent">0% </span> Utbankat </h3>
   </div>
   <div class="part3">
     <h1 class="partTitle white">Lätt att använda</h1>
   </div>
   <div class="part4">
-    <h1 class="partTitle white">Rekomendationer</h1>
+    <h1 class="partTitle white">Rekommendationer</h1>
     <div class="plura quoteBlock">
       <img src="images/plura.png" alt="" class="faceImagePlura">
       <h2 class="names white">Plura</h2>
@@ -34,29 +34,29 @@
     </div>
     <div class="persbrandt quoteBlock">
       <img src="images/persbrandt.png" alt="" class="faceImagePersbrandt">
-      <h2 class="names">Persbrandt</h2>
+      <h2 class="names white">Persbrandt</h2>
       <p>- Lycka är jävligt överskattat man får vara nöjd om man är lite glad ibland</p>
     </div>
     <div class="tina quoteBlock">
       <img src="images/kokstina.png" alt="" class="faceImageTina">
-      <h2 class="names">Koks-Tina</h2>
+      <h2 class="names white">Koks-Tina</h2>
       <p>- Riktigt hästakaffe 
         - så starkt att öronen fladrar!</p>
       </div>
     </div>
     <div class="part5">
-      <h1 class="partTitle">Hur fungerar <span class="h1Red">Dunder</span></h1>
-      <section class="Part5">
+      <h1 class="partTitle">Hur fungerar <span class="white">Dunder</span></h1>
+      <section class="section5">
         <h2 class="h2Part5">Uppiggande</h2>
         <p>För dig som inte tål kaffe</p>
         <h2 class="h2Part5">Hämmar minnesbildning</h2>
         <p>Så att du kan festa utan bry dig om vad du kommer ihåg imorgon</p>
         <h2 class="h2Part5">Kliniskt bevisad effekt</h2>
-        <p>10 av 10 läkare rekomenderar</p>
+        <p>10 av 10 läkare rekommenderar</p>
       </section>
       <div class="snowWhite">
         <img src="images/snowvit.jpeg" alt="snövit" class="doctor">
-        <h2>Doktor Snövit</h2>
+        <h2 class="doctorName">Doktor Snövit</h2>
       </div>
     </div>
     <div class="part6">
@@ -72,7 +72,7 @@
           <h2>5 gram</h2>
         </div>
         <button class="orderButton">
-          <span>Drop</span>
+          <span class="white">Drop</span>
         </button>      
       </section>
     </div>
