change javascript for scrolling down and added scripts for orderBox

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2 class="doctorName">Doktor Snövit</h2>
       </div>
     </div>
-    <div class="part6">
+    <div class="part6" id="part6">
       <h1 class="partTitle">Tjacka</h1>
       <h2 class="subTitle">Hur kul vill du ha kompis?</h2>
       <section>
