--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   </div>
   <div class="part4">
     <h1 class="partTitle white">Rekommendationer</h1>
+    <div class="hej">  
     <div class="plura quoteBlock">
       <img src="images/plura.png" alt="" class="faceImagePlura">
       <h2 class="names white">Plura</h2>
@@ -90,6 +91,7 @@
       <h2 class="names white">Koks-Tina</h2>
       <p class="quote white">- Riktigt hästakaffe 
         - så starkt att öronen fladrar!</p>
+      </div>
       </div>
     </div>
     <div class="part5">
