--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
   </div>
   <div class="part4">
-    <h1 class="partTitle white">Rekommendationer</h1>
+    <h1 class="partTitle white partTitlePart4">Rekommendationer</h1>
     <div class="fullSection4">  
     <div class="plura quoteBlock">
       <img src="images/plura.png" alt="" class="faceImagePlura">
@@ -106,7 +106,7 @@
       </section>
       <div class="snowWhite">
         <img src="images/snowvit.jpeg" alt="snövit" class="doctor">
-        <h2 class="doctorName">Doktor Snövit</h2>
+        <h2 class="doctorName"> &nbsp;&nbsp; Doktor Snövit</h2>
       </div>
     </div>
     <div class="part6" id="part6">
