--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 <body>
   <div class="part1">
-    <h1>Dunder</h1>
-    <h2 class="slogan">- som gör under</h2>
+    <div>
+      <h1>Dunder</h1>
+      <h2 class="slogan">- som gör under</h2>
+    </div>
     <img src="images/koks.png" alt="dunder" class="heroImage">
     <p class="scrollDown">Köp NU!</p>
   </div>
